--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contect US </title>
-    <link rel="stylesheet" href="contect.css" class="css">
+    <link rel="stylesheet" href="contact.css" class="css">
 </head>
 <body>
     <div class="main">
