--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WanderWisdom</title>
     <link rel="stylesheet" href="style.css" class="css">
-    <link rel="stylesheet" href="media.css" class="css">
+    <link rel="stylesheet" href="contact.css" class="css">
 </head>
 <body>
     <header class="header">
@@ -99,6 +99,34 @@ Trekking enthusiasts flock to Zanskar for its challenging trails, which lead to 
 
 Whether it's exploring ancient monasteries like Phugtal and Karsha, interacting with friendly locals in quaint villages, or simply basking in the tranquility of the remote Himalayan landscape, Zanskar Valley offers a journey of discovery that is as enriching as it is unforgettable.
             </p>
+        </div>
+    </div>
+     <hr/>
+    <div class="connect">
+        <div class="main">
+            <div class="contact">
+                <h1>Contect US</h1>
+                <h4>Please fill out the form below, and we'll get in touch with you shortly</h4>
+                <span class="inputdetails">
+                    <input type="text" class="name" placeholder="Enter your first name*">
+                    <input type="text" class="lname " placeholder="Enter your last name* ">
+                </span>
+                <span class="email">
+                    <input type="text" class="email " placeholder="Enter your Email Address*">
+                </span>
+                <span class="phone">
+                    <input type="text" class="m-num" placeholder="Enter Your phone Number*">
+                </span>
+                <span class="discription">
+                    <input class="discription" type="text" placeholder="Please tell us about your doubt.">
+                </span>
+                <span class="btnse">
+                <button class="send-btn">
+                    Send
+                </button>
+                </span>
+    
+            </div>
         </div>
     </div>
        
