--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li> <a href="#" onclick="scrollToContainer()">Home</a> </li>
                 <li><a href="#">About</a></li>
                 <li><a href="#" onclick="scrollToExplain()">Blog</a></li>
-                <li><a href="#">Contect </a></li>
+                <li><a  href="contact.html" target="_blank" >Contect </a></li>
             </ul>
         </nav>
     </header>
